--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
       <link rel="stylesheet" href="bower_components/select2/select2.css" />
       <link rel="stylesheet" href="bower_components/select2-bootstrap-css/select2-bootstrap.css" />
       <link rel="stylesheet" href="bower_components/fng-select2/fng-select2.css" />
+      <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.min.css" />
       <!-- endbower -->
       <link rel="stylesheet" href="/bower_components/jquery-ui/themes/smoothness/jquery-ui.css" />
       <!-- endbuild -->
@@ -37,6 +38,7 @@
       <link rel="stylesheet" href="app/cardList/cardList.css">
       <link rel="stylesheet" href="app/edit/edit.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/preview/preview.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -110,6 +112,7 @@
       <script src="bower_components/ng-ckeditor/ng-ckeditor.js"></script>
       <script src="bower_components/select2/select2.js"></script>
       <script src="bower_components/angular-ui-select2/src/select2.js"></script>
+      <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -121,8 +124,11 @@
           <script src="app/cardList/cardList.directive.js"></script>
           <script src="app/edit/edit.controller.js"></script>
           <script src="app/edit/edit.js"></script>
+          <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/preview/preview.controller.js"></script>
+          <script src="app/preview/preview.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
