--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,31 +2,17 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
+    <h1>Great Gulf Challenge</h1>
     <p class="lead">
-    Always a pleasure scaffolding your apps.<br />
-    Speaking of apps, I have taken the liberty of creating a database of applicants for the under-butler position and adding it to the menu above
-
-    Kick-start your next web app with yeoman and forms-angular</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    Choose a <span class = "text-danger"> model</span> to <span tooltip="Create, Read, Update, Destroy">CRUD</span> data  , or <span class = "text-danger"> mode</span> to preview or test</p>
+  Type <span class="cfp-hotkeys-key">?</span> to view hotkeys.
   </div>
 </header>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+
 
 <footer class="footer">
   <div class="container">
-      <p>forms-angular generator v0.2.3 |
-      <a href="https://twitter.com/formsangular">@formsangular</a> |
-      <a href="https://github.com/forms-angular/generator-angular-fullstack/issues?state=open">Issues</a></p>
+     
   </div>
 </footer>
