--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
       <link rel="stylesheet" href="app/edit/edit.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/preview/preview.css">
+      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
