added root Controller

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="ggcApp"  ng-keyup="globalShortcuts($event)">
+  <body ng-app="ggcApp"  ng-keyup="globalShortcuts($event)" ng-controller="AppCtrl">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -130,6 +130,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/preview/preview.controller.js"></script>
           <script src="app/preview/preview.js"></script>
+          <script src="app/root/root.controller.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
