--- a/client/app/preview/preview.html
+++ b/client/app/preview/preview.html
@@ -1,5 +1,9 @@
-<div class="col-md-12">
-This is the preview view.
-<pre>{{printObject(cards[currentCard])}}</pre>
-<div ng-bind-html="trust(cards[currentCard].icon)" ></div>
+<div class = container>
+	<div class = "row">
+		<div class="col-md-8">
+			<h3>This is the preview view.</h3>
+			<pre>{{printObject(cards[currentCard])}}</pre>
+		</div>
+		<div class = "col-md-4" ng-bind-html="trust(cards[currentCard].icons.icon)" ></div>
+	</div>
 </div>
