--- a/client/app/preview/preview.html
+++ b/client/app/preview/preview.html
@@ -1,9 +1,12 @@
 <div class = container>
 	<div class = "row">
-		<div class="col-md-8" >
-			<h3>This is the preview view.</h3>
-			<pre>{{printObject(cards[currentCard])}}</pre>
-		</div>
-		<div class = "col-md-4" ng-bind-html="trust(cards[currentCard].icons.icon)" ></div>
-	</div>
+			<h3>This is the preview view.<small> current card: {{currentCard}}</h3>
+				<div class="relative">
+					<div class = "preview"  ng-repeat = "card in cards" ng-hide="!$index == currentCard">
+						<div class="col-md-8">
+							<pre>{{printObject(card)}}</pre>
+						</div>
+							<div class = "col-md-4" ng-bind-html="trust(card.icons.icon)" ></div>
+					</div>
+				</div>
 </div>
