--- a/client/index.html
+++ b/client/index.html
@@ -114,6 +114,7 @@
       <script src="bower_components/select2/select2.js"></script>
       <script src="bower_components/angular-ui-select2/src/select2.js"></script>
       <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
+      <script src="bower_components/angular-animate/angular-animate.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
