--- a/client/app/preview/preview.cards.html
+++ b/client/app/preview/preview.cards.html
@@ -1,11 +1,8 @@
 <div class = "row">
-			<div class = "col-md-6"><h3>Card:.<small> current card: {{currentCard}}</h3></div>
+			<div class = "col-md-6"><h3>Card:.<small> current card: {{preview.currentCard}}</h3></div>
 </div>
 <div class = "row relative">
-
-	
-	
-			<div class = "preview"  ng-repeat = "card in cards" ng-hide="$index != currentCard">
+			<div class = "preview"  ng-repeat = "card in preview.cards" ng-hide="$index != preview.currentCard">
 				<div class="col-md-8">
 					<pre>{{printObject(card)}}</pre>
 				</div>
