--- a/client/app/preview/preview.html
+++ b/client/app/preview/preview.html
@@ -1,6 +1,6 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<div ng-include="'components/navbar/navbar.html'" ng-hide ="preview.hideNavbar" ></div>
 <div class = container>
-	<div class = "row">
+	<div class = "row" ng-hide ="preview.hideNavbar">
 			<div class = "col-md-4"><h1>Preview</h1></div>
 			<div class = "col-md-8">
 				<br>
@@ -9,7 +9,7 @@
 				       Select Model <span class="caret"></span>
 				      </button>
 				      <ul class="dropdown-menu" role="menu">
-				        <li ng-repeat = "state in config.previewStates"><a ui-sref = ".{{state}}" >{{state}}</a></li
+				        <li ng-repeat = "state in preview.previewStates"><a ui-sref = ".{{state}}" >{{state}}</a></li
 				      </ul>
 				    </div>
 			</div>
