--- a/client/app/preview/preview.icons.html
+++ b/client/app/preview/preview.icons.html
@@ -3,7 +3,7 @@
 </div>
 <div class = "row relative">
 
-	<div ng-repeat = "icon in icons">
+	<div ng-repeat = "icon in preview.icons">
 		<div  class = "col-md-4"  >
 			<h3>{{icon.action}}</h3>
 			<div class = "well" ng-bind-html="trust(icon.icon)"></div>
