--- a/client/index.html
+++ b/client/index.html
@@ -116,6 +116,7 @@
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/cardList/cardList.directive.js"></script>
+          <script src="app/deck/deck.service.js"></script>
           <script src="app/edit/edit.controller.js"></script>
           <script src="app/edit/edit.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
