added preview.test state

--- a/client/app/preview/preview.icons.html
+++ b/client/app/preview/preview.icons.html
@@ -6,7 +6,7 @@
 	<div ng-repeat = "icon in preview.icons">
 		<div  class = "col-md-4"  >
 			<h3>{{icon.action}}</h3>
-			<div class = "well" ng-bind-html="trust(icon.icon)"></div>
+			<div class = " bg-primary well" ng-bind-html="trust(icon.icon)"></div>
 		</div>
 	</div>
 </div>
