--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
       <link rel="stylesheet" href="bower_components/fng-select2/fng-select2.css" />
       <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.min.css" />
       <!-- endbower -->
-      <link rel="stylesheet" href="/bower_components/jquery-ui/themes/smoothness/jquery-ui.css" />
+
       <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
       <!-- injector:css -->
@@ -116,7 +116,7 @@
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/cardList/cardList.directive.js"></script>
-          <script src="app/deck/deck.service.js"></script>
+          <script src="app/dealer/dealer.service.js"></script>
           <script src="app/edit/edit.controller.js"></script>
           <script src="app/edit/edit.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
