--- a/client/app/preview/preview.cards.html
+++ b/client/app/preview/preview.cards.html
@@ -6,7 +6,7 @@
 				<div class="col-md-8">
 					<pre>{{printObject(card)}}</pre>
 				</div>
-				<div class = "col-md-4" ng-bind-html="trust(card.icons.icon)" ></div>
+				<div class = "col-md-4" ng-bind-html="trust(card.icon.icon)" ></div>
 			</div>
 		</div>
 </div>
