--- a/client/app/preview/preview.screen.html
+++ b/client/app/preview/preview.screen.html
@@ -1,40 +1,40 @@
 <div class = "row">
-			<div class = "col-md-6"><h3>Screen</h3></div>
+			<div class = "col-md-6"><h2>Screen</h2></div>
 </div>
 <div class = "row relative">
-			<div class = "preview"  ng-repeat = "card in test.cards" ng-hide="$index != preview.currentCard">
+			<div class = "preview">
 				<div id="main">
 				  <div id="mapA" >AAA</div>
 				  <div id="mapB" >BBB</div>
 				  <div id="borderscrim"></div>
 				  <div class="row">
 				  	<div class="col-md-offset-4">
-						<div style="margin-top:30%; float:left; position:relative;" class="scenario-card col-md-3" ng-repeat = "card in test.cards">
-							<div style="margin-left:25%;width:50%; height:50%;" ng-bind-html="trust(card.icons.icon)"></div>
-							<h2>{{card.action}}</h2>
-							<div style="font-size:1.5em;" ng-bind-html="card.mainText"></div>
+						<div style="margin-top:25%; float:left; position:relative;" class="scenario-card col-md-3 text-center" ng-repeat = "mainCard in hands.main track by $index">
+							<div style="margin-left:25%;width:50%; height:50%;" ng-bind-html="trust(mainCard.icon.icon)"></div>
+							<h3>{{mainCard.action}}</h3>
+							<div style="font-size:1.25em;" ng-bind-html="mainCard.mainText"></div>
 						</div>
 					</div>
 
 				  </div>
-				  	
+
 				  <div id="perspective_plane_container">
 				    <div id="perspective_plane">
 				      <div id="hexMatrix"></div>
 				      <div id="enviroPanelOuter">
-				        <div id="enviroPanelInner">
+				        <div id="enviroPanelInner" ng-click="toggleEnviro()">
 				          <div class="topPlane"><div class="colorbar"><h3>ENVIRONMENT</h3></div></div>
 				          <div class="bottomPlane"></div>
 				        </div>
 				      </div>
 				      <div id="econoPanelOuter">
-				        <div id="econoPanelInner">
+				        <div id="econoPanelInner" ng-click="toggleEcon()">
 				          <div class="topPlane"><div class="colorbar"><h3>ECONOMY</h3></div></div>
 				          <div class="bottomPlane"></div>
 				        </div>
 				      </div>
 				      <div id="energyPanelOuter">
-				        <div id="energyPanelInner">
+				        <div id="energyPanelInner" ng-click="toggleEnergy()">
 				          <div class="topPlane"><div class="colorbar"><h3>ENERGY</h3></div></div>
 				          <div class="bottomPlane"></div>
 				        </div>
@@ -45,14 +45,11 @@
 				<br/><br/><br/>
 				<div class="col-md-12" >
 					<br/>
-					
-					<br/>
-					<!--pre>{{printObject(card)}}</pre-->
 				</div>
 			</div>
 		</div>
 </div>
 
 <script>
-	
+
 </script>
