Changing for new object model

--- a/client/app/preview/preview.screen.html
+++ b/client/app/preview/preview.screen.html
@@ -24,7 +24,7 @@
               <div id="hexMatrix"></div>
 
               <!-- >The Player Panels Go Here<-->
-              <div ng-repeat="(player, hand) in hands.players">
+              <div ng-repeat="(name, player) in game.players">
                 <player-panel></player-panel>
               </div>
 
