--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -1,8 +1,8 @@
 
 
-<div class="panelOuter{{player}}" >
+<div class="panelOuter{{name}}" >
   <div class="panelInnerEnvironment">
-    <div class="topPlane"><div class="colorbar"><h3>{{player}}</h3></div></div>
+    <div class="topPlane"><div class="colorbar"><h3>{{name}}</h3></div></div>
     <div class="bottomPlane"></div>
   </div>
 </div>
