Adding Styling and Filter to Player Panel

--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -2,7 +2,7 @@
 
 <div class="panelOuter{{name}}" >
   <div class="panelInnerEnvironment">
-    <div class="topPlane"><div class="colorbar"><h3>{{name}}</h3></div></div>
+    <div class="topPlane"><div class="colorbar"><h3>{{name | capitalize}}</h3></div></div>
     <div class="bottomPlane"></div>
   </div>
 </div>
