--- a/client/app/preview/preview.screen.html
+++ b/client/app/preview/preview.screen.html
@@ -11,7 +11,7 @@
           <!-- >The MAIN (Center) Cards Go Here<-->
           <div class="row">
             <div class="col-md-offset-4">
-              <div style="margin-top:25%; float:left; position:relative;" class="scenario-card col-md-3 text-center" ng-repeat = "mainCard in hands.main track by $index">
+              <div style="margin-top:25%; float:left; position:relative;" class="scenario-card col-md-3 text-center" ng-repeat = "mainCard in game.main track by $index">
                 <div style="margin-left:25%;width:50%; height:50%;" ng-bind-html="trust(mainCard.icon.icon)"></div>
                 <h3>{{mainCard.action}}</h3>
                 <div style="font-size:1.25em;" ng-bind-html="mainCard.mainText"></div>
