--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
       <link rel="stylesheet" href="app/edit/edit.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/preview/preview.css">
+      <link rel="stylesheet" href="app/sandbox/sandbox.css">
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -124,9 +125,12 @@
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/map/map.service.js"></script>
           <script src="app/preview/preview.controller.js"></script>
           <script src="app/preview/preview.js"></script>
           <script src="app/root/root.controller.js"></script>
+          <script src="app/sandbox/sandbox.controller.js"></script>
+          <script src="app/sandbox/sandbox.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
