--- a/client/index.html
+++ b/client/index.html
@@ -108,7 +108,9 @@
       <script src="bower_components/angular-ui-select2/src/select2.js"></script>
       <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/d3/d3.js"></script>
       <!-- endbower -->
+    <script src="lib/hexbin.js"></script>
     <!-- endbuild -->
 
     <script src="//cdn.ckeditor.com/4.4.4/standard/ckeditor.js"></script>
