--- a/client/index.html
+++ b/client/index.html
@@ -124,6 +124,7 @@
           <script src="app/edit/edit.controller.js"></script>
           <script src="app/edit/edit.js"></script>
           <script src="app/filters/filters.filter.js"></script>
+          <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
