Added styling to card previews

--- a/client/app/preview/preview.cards.html
+++ b/client/app/preview/preview.cards.html
@@ -1,20 +1,34 @@
 <div class = "row">
-			<div class = "col-md-6"><h3>Card:.<small> current card: {{preview.currentCard}}</h3></div>
-</div>
-<div class = "row relative">
-			<div class = "preview"  ng-repeat = "card in preview.cards" ng-hide="$index != preview.currentCard">
-				<div class="scenario-card">
-					<div style="width:30%; height:30%; float:left; maring-right:15px;" ng-bind-html="trust(card.icons.icon)"></div>
-					<h2 style="margin-left:130px;">{{card.action}}</h2>
-					<div style="clear:both; font-size:1.5em;" ng-bind-html="card.mainText"></div>
-				</div>
-				<br/>
-				<div class="col-md-8">
-					<pre>{{printObject(card)}}</pre>					
-				</div>
-				<div class = "col-md-4" ng-bind-html="trust(card.icon.icon)" ></div>
-			</div>
-		</div>
+  <div class = "preview">
+    <div id="main">
+      <div id="mapA" >AAA</div>
+      <div id="mapB" >BBB</div>
+      <div id="borderscrim"></div>
+
+      <!-- >The MAIN (Center) Cards Go Here<-->
+      <div class="row">
+        <div class="col-md-offset-4">
+          <div style="margin-top:25%; float:left; position:relative;" class="scenario-card col-md-3 text-center" ng-repeat = "card in preview.cards" ng-hide="$index != preview.currentCard">
+            <div style="margin-left:25%;width:50%; height:50%;" ng-bind-html="trust(card.icon.icon)"></div>
+            <h3>{{card.action}}</h3>
+            <div style="font-size:1.25em;" ng-bind-html="card.mainText"></div>
+          </div>
+        </div>
+      </div>
+
+      <div id="perspective_plane_container">
+        <div id="perspective_plane">
+          <div id="hexMatrix"></div>
+
+          <!-- >The Player Panels Go Here<-->
+          <div ng-repeat="(name, player) in game.players">
+            <player-panel></player-panel>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
