--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -1,7 +1,7 @@
 
 
 <div class="panelOuter{{name}}" >
-  <div ng-class="{true: 'panelInnerEnvironment extended', false: 'panelInnerEnvironment'}[player.currentPlayer == true]">
+  <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.currentPlayer == false]-->
     <div class="topPlane"><div class="colorbar"><h3>{{name | capitalize}}</h3></div></div>
     <div class="bottomPlane">
       <div ng-show = "player.currentPlayer">
