Creating /game Route
Meshes the graphics with Ryan’s game logic.

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/cardList/cardList.css">
       <link rel="stylesheet" href="app/edit/edit.css">
+      <link rel="stylesheet" href="app/game/game.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
       <link rel="stylesheet" href="app/preview/preview.css">
@@ -125,6 +126,8 @@
           <script src="app/edit/edit.controller.js"></script>
           <script src="app/edit/edit.js"></script>
           <script src="app/filters/filters.filter.js"></script>
+          <script src="app/game/game.controller.js"></script>
+          <script src="app/game/game.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
