--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -4,13 +4,30 @@
   <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.currentPlayer == false]-->
     <div class="topPlane"><div class="colorbar"><h3>{{name | capitalize}}</h3></div></div>
     <div class="bottomPlane">
-      <div ng-show = "player.currentPlayer">
-        <h4 style="margin-top:80px; margin-left:75px;" class = "tab-title">Choose an issue to propose.</h4>
-        <div class = "col-md-6" ng-click="dealer.choose($index)" ng-repeat="choice in player.hand.choices track by $index">
-          <h5 class="tab-body text-right">{{choice.action | capitalize}}</h5>
-          <div style="" class="tab-img" ng-bind-html="trust(choice.icon.icon)"></div>
+
+      <div ng-show="game.phase == 'choice'">
+        <div ng-show = "player.currentPlayer">
+          <h4 style="margin-top:80px; margin-left:75px;" class = "tab-title">Choose an issue to propose.</h4>
+          <div class = "col-md-6" ng-click="dealer.choose($index)" ng-repeat="choice in player.hand.choices track by $index">
+            <h5 class="tab-body text-right">{{choice.action | capitalize}}</h5>
+            <div style="" class="tab-img" ng-bind-html="trust(choice.icon.icon)"></div>
+          </div>
         </div>
       </div>
-    </div>
+
+      <div ng-show = "game.phase == 'vote'" class="vote-block">
+        <h5>{{player.hand.vote.action}}</h5>
+        <div class="tab-img-vote" ng-bind-html="trust(player.hand.issue.icon.icon)"></div>
+        <p class="tab-body" ng-repeat = "t in player.hand.issue.text">{{t}}</p>
+
+      </div>
+
+      <div ng-show = "game.phase == 'vote'" class="vote-buttons">
+        <div class="btn-group" role="group" ng-hide = "player.voted" aria-label="...">
+          <a ng-click="dealer.vote(name, 1)" class = "btn btn-primary">Yes</a>
+          <a ng-click="dealer.vote(name, 0)" class = "btn btn-danger">No</a>
+        </div>
+      </div>
+
   </div>
 </div>
