--- a/client/app/preview/preview.cards.html
+++ b/client/app/preview/preview.cards.html
@@ -6,10 +6,10 @@
       <div id="borderscrim"></div>
 
       <!-- >The MAIN (Center) Cards Go Here<-->
-      <div class="row">
-        <div class="col-md-offset-4">
-          <div style="margin-top:25%; float:left; position:relative;" class="scenario-card col-md-3 text-center" ng-repeat = "card in preview.cards" ng-hide="$index != preview.currentCard">
-            <div style="margin-left:25%;width:50%; height:50%;" ng-bind-html="trust(card.icon.icon)"></div>
+      <div id="box-wrap-inner">
+        <div>
+          <div class="scenario-card text-left" ng-repeat = "card in preview.cards" ng-hide="$index != preview.currentCard">
+            <div class="scenario-icon" ng-bind-html="trust(card.icon.icon)"></div>
             <h3>{{card.action}}</h3>
             <div style="font-size:1.25em;" ng-bind-html="card.mainText"></div>
           </div>
