--- a/client/app/sandbox/grid.html
+++ b/client/app/sandbox/grid.html
@@ -1,6 +1,6 @@
 this is the grid
-<div class = "gridContainer">
-  <div ggc-grid='true'>
+<div class = " gridContainer">
+  <div class = "relative" ggc-grid='true'>
 
   </div>
 </div>
