--- a/client/app/preview/preview.icons.html
+++ b/client/app/preview/preview.icons.html
@@ -3,11 +3,16 @@
 </div>
 <div class = "row relative">
 
+  <div  class = "col-md-1">
+    <ggc-icon icon-id="{{preview.icon._id}}"></ggc-icon>
+  </div>
+<!--
 	<div ng-repeat = "icon in preview.icons">
 		<div  class = "col-md-4"  >
 			<h3>{{icon.action}}</h3>
 			<div class = " bg-primary well" ng-bind-html="trust(icon.icon)"></div>
 		</div>
 	</div>
+	-->
 </div>
 
