--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/cardList/cardList.css">
       <link rel="stylesheet" href="app/edit/edit.css">
+      <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
       <link rel="stylesheet" href="app/preview/preview.css">
@@ -126,6 +127,7 @@
           <script src="app/edit/edit.js"></script>
           <script src="app/filters/filters.filter.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
+          <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
