Adding scoreBoard Directive

--- a/client/index.html
+++ b/client/index.html
@@ -139,6 +139,7 @@
           <script src="app/root/root.controller.js"></script>
           <script src="app/sandbox/sandbox.controller.js"></script>
           <script src="app/sandbox/sandbox.js"></script>
+          <script src="app/scoreBoard/scoreBoard.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
