Preliminary Scoreboard Rendering/Directive

--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
       <link rel="stylesheet" href="app/preview/preview.css">
       <link rel="stylesheet" href="app/sandbox/sandbox.css">
+      <link rel="stylesheet" href="app/scoreBoard/scoreBoard.css">
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
       <!-- endinjector -->
     <!-- endbuild -->
