--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,4 +1,8 @@
+
+
 <div id="main">
+  <score-board></score-board>
+
   <div id="mapA" >AAA</div>
   <div id="mapB" >BBB</div>
   <div id="borderscrim"></div>
@@ -20,10 +24,12 @@
 
       <!-- >The Player Panels Go Here<-->
       <div ng-repeat="(name, player) in game.players">
-        <player-panel></player-panel>
+        <player-panel ></player-panel>
       </div>
 
     </div>
 
   </div>
 </div>
+
+
