--- a/client/app/scoreBoard/scoreBoard.html
+++ b/client/app/scoreBoard/scoreBoard.html
@@ -1,1 +1,24 @@
-<div>this is the scoreBoard directive</div>
+
+
+
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="1920px" height="1200px" viewBox="0 0 1920 1200" enable-background="new 0 0 1920 1200" xml:space="preserve">
+	<path fill="none" id="energyPath" stroke="#FF0000" d="M1311.139,96.628c222.659,79.287,387.805,230.671,437.731,412.249"/>
+	<path fill="none" id="economyPath" stroke="#FF0000" d="M624.771,88.036c100.929-32.846,212.813-51.113,330.572-51.113
+	c120.58,0,235,19.153,337.807,53.499"/>
+	<path fill="none" id="environmentPath" stroke="#FF0000" d="M162.573,506.155c51.236-181.837,218.115-333.083,442.396-411.44"/>
+
+  <g fill="white">
+    <text font-family="symbols" font-size="42">
+      <textPath xlink:href="#energyPath">
+        AAA
+      </textPath>
+      <textPath xlink:href="#economyPath">
+        AAA
+      </textPath>
+      <textPath xlink:href="#environmentPath">
+        AAA
+      </textPath>
+    </text>
+  </g>
+</svg>
