iconClass and frame

--- a/client/app/preview/preview.icons.html
+++ b/client/app/preview/preview.icons.html
@@ -3,8 +3,14 @@
 </div>
 <div class = "row relative">
 
+  <div  class = "col-md-4">
+    <ggc-icon frame="true" icon-class="environment" icon-id="{{preview.icon._id}}"></ggc-icon>
+  </div>
+  <div  class = "col-md-2">
+    <ggc-icon frame="true" icon-class="environment" icon-id="{{preview.icon._id}}"></ggc-icon>
+  </div>
   <div  class = "col-md-1">
-    <ggc-icon icon-id="{{preview.icon._id}}"></ggc-icon>
+    <ggc-icon frame="true" icon-class="environment" icon-id="{{preview.icon._id}}"></ggc-icon>
   </div>
 <!--
 	<div ng-repeat = "icon in preview.icons">
