--- a/client/app/sandbox/grid.html
+++ b/client/app/sandbox/grid.html
@@ -1,7 +1,8 @@
 this is the grid
-<div class = " gridContainer">
-  <div class = "relative" ggc-grid='true'>
+<div class = " gridContainer relative">
+  <div " ggc-grid='true'>
 
   </div>
+  <ggc-icon-grid></ggc-icon-grid>
 </div>
 
