--- a/client/app/preview/preview.icons.html
+++ b/client/app/preview/preview.icons.html
@@ -7,7 +7,7 @@
     <ggc-icon frame="true" icon-class="environment" icon-id="{{preview.icon._id}}"></ggc-icon>
   </div>
   <div  class = "col-md-2">
-    <ggc-icon frame="true" icon-class="environment" icon-id="{{preview.icon._id}}"></ggc-icon>
+    <ggc-icon  icon-class="energy" icon-id="{{preview.icon._id}}"></ggc-icon>
   </div>
   <div  class = "col-md-1">
     <ggc-icon frame="true" icon-class="environment" icon-id="{{preview.icon._id}}"></ggc-icon>
