--- a/client/app/sandbox/grid.html
+++ b/client/app/sandbox/grid.html
@@ -1,8 +1,8 @@
 this is the grid
 <div class = " gridContainer relative">
-  <div " ggc-grid='true'>
+  <div " ggc-grid='true' >
 
   </div>
-  <ggc-icon-grid></ggc-icon-grid>
+  <ggc-icon-grid ng-click="clicked($event)"></ggc-icon-grid>
 </div>
 
