--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
       <link rel="stylesheet" href="app/cardList/cardList.css">
       <link rel="stylesheet" href="app/edit/edit.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
+      <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
       <link rel="stylesheet" href="app/preview/preview.css">
@@ -128,6 +129,7 @@
           <script src="app/filters/filters.filter.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
+          <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
