--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,7 +1,8 @@
 
 
+
 <div id="main">
-  <score-board></score-board>
+  <score-board style="pointer-events: none;"></score-board>
 
   <div id="mapA" >AAA</div>
   <div id="mapB" >BBB</div>
