--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -11,9 +11,11 @@
   <!-- >The MAIN (Center) Cards Go Here<-->
   <div class="row">
     <div id="box-wrap-inner">
-      <div style="margin-top:14%; float:left; position:relative;" class="scenario-card col-md-3 text-left" ng-repeat = "mainCard in game.main track by $index">
-        <div style="margin-left:25%; margin-bottom:15%; width:50%; height:50%;" ng-bind-html="trust(mainCard.icon.icon)"></div>
-        <h3>{{mainCard.action | capitalize}}</h3>
+      <div style="" class="scenario-card-{{$index}} text-left" ng-repeat = "mainCard in game.main track by $index">
+        <div>
+          <div class="scenario-icon" ng-bind-html="trust(mainCard.icon.icon)"></div>
+          <h3>{{mainCard.action | capitalize}}</h3>
+        </div>
         <div style="font-size:1.25em;" ng-bind-html="mainCard.mainText"></div>
       </div>
     </div>
