--- a/client/app/scoreBoard/scoreBoard.html
+++ b/client/app/scoreBoard/scoreBoard.html
@@ -12,10 +12,9 @@
 
   <g>
     <text text-anchor="start" font-size="28" >
-      <textPath ng-bind-html="score.i | scoreIcons:team" ng-repeat="(team, score) in game.score" startOffset="3%"  letter-spacing="-5px" font-family="Glyphicons Halflings" fill="{{team | teamColor:team}}" xlink:href="{{team | identify}}">
+      <textPath ng-bind-html="score.i | scoreIcons:team" ng-repeat="(team, score) in game.score" startOffset="3%"  letter-spacing="-5px" font-family="Glyphicons Halflings" fill="{{team | teamColor:team}}" id="{{team | identify}}" xlink:href="{{team | identify}}">
 
       </textPath>
-
     </text>
   </g>
 </svg>
