--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -1,6 +1,6 @@
 
 
-<div class="panelOuter{{name}}" >
+<div ng-class="player.docked ? 'panelOuter{{name}}' : 'panelOuter{{name}} retract'">
   <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.currentPlayer == false]-->
     <div class="topPlane"><div class="colorbar"><h3>{{name | capitalize}}</h3></div></div>
     <div class="bottomPlane">
@@ -8,7 +8,7 @@
       <div ng-show="game.phase == 'choice'">
         <div ng-show = "player.currentPlayer">
           <h4 class = "tab-title">Choose an issue to propose.</h4>
-          <div class = "col-md-6" ng-click="dealer.choose($index)" ng-repeat="choice in player.hand.choices track by $index">
+          <div class="col-md-6" ng-click="dealer.choose($index)" ng-repeat="choice in player.hand.choices track by $index">
             <h5 class="tab-body text-center">{{choice.action | capitalize}}</h5>
             <div style="" class="tab-img" ng-bind-html="trust(choice.icon.icon)"></div>
           </div>
