adding THREE.js module

--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
       <link rel="stylesheet" href="app/game/game.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
+      <link rel="stylesheet" href="app/ggcThree/ggcThree.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
       <link rel="stylesheet" href="app/preview/preview.css">
@@ -123,6 +124,7 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/THREE/THREE.service.js"></script>
           <script src="app/cardList/cardList.directive.js"></script>
           <script src="app/d3/d3.service.js"></script>
           <script src="app/dealer/dealer.service.js"></script>
@@ -134,6 +136,8 @@
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
+          <script src="app/ggcThree/ggcThree.directive.js"></script>
+          <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
