--- a/client/index.html
+++ b/client/index.html
@@ -115,6 +115,7 @@
       <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/d3/d3.js"></script>
+      <script src="bower_components/threejs/build/three.js"></script>
       <!-- endbower -->
     <script src="lib/hexbin.js"></script>
     <!-- endbuild -->
