grid now only renders icon list

--- a/client/app/ggcIconGrid/ggcIconGrid.html
+++ b/client/app/ggcIconGrid/ggcIconGrid.html
@@ -1,8 +1,8 @@
 this is the ggcIconGrid directive
 <!-- div class = "relative" -->
-  <div ng-repeat="hex in grid.hexes">
+  <div ng-repeat="hex in grid.gridIcons track by $index">
     <div icon-wrap>
-        <ggc-icon grid-index="{{$index}}" icon-id="{{hex.iconId}}"></ggc-icon>
+        <ggc-icon  grid-index="{{$index}}" icon-id="{{hex.iconId}}"></ggc-icon>
     </div>
   </div>
 <!--/div-->
