--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
       <link rel="stylesheet" href="app/preview/preview.css">
       <link rel="stylesheet" href="app/sandbox/sandbox.css">
       <link rel="stylesheet" href="app/scoreBoard/scoreBoard.css">
+      <link rel="stylesheet" href="app/vars.css">
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
       <!-- endinjector -->
     <!-- endbuild -->
