--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -24,8 +24,8 @@
 
       <div ng-show = "game.phase == 'vote'" class="vote-buttons">
         <div class="btn-group" role="group" ng-hide = "player.voted" aria-label="...">
-          <a ng-click="dealer.vote(name, 1)" class = "btn btn-primary">Yes</a>
-          <a ng-click="dealer.vote(name, 0)" class = "btn btn-danger">No</a>
+          <a ng-click="dealer.vote(name, 1)" class = "btn-icon {{name}}" >PASS</a>
+          <a ng-click="dealer.vote(name, 0)" class = "btn-icon {{name}}" >BLOCK</a>
         </div>
       </div>
 
