added icons as directives, cleaning up css-insanity

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -2,42 +2,9 @@
 
 
 <div id="main">
-  <score-board style="pointer-events: none;"></score-board>
-
-  <div id="mapA" >AAA</div>
-  <div id="mapB" >BBB</div>
-  <div id="borderscrim"></div>
-
-  <!-- >The MAIN (Center) Cards Go Here<-->
-  <div class="row">
-    <div id="box-wrap-inner">
-      <div style="" class="scenario-card-{{$index}} text-left" ng-repeat = "mainCard in game.main track by $index">
-        <div>
-          <div class="scenario-icon" ng-bind-html="trust(mainCard.icon.icon)"></div>
-          <h3>{{mainCard.action | capitalize}}</h3>
-        </div>
-        <div style="font-size:1.25em;" ng-bind-html="mainCard.mainText"></div>
-      </div>
-    </div>
-  </div>
-
-  <div id="perspective_plane_container">
-    <div id="perspective_plane">
-      <div class = "gridContainer relative">
-        <div id="hexMatrix" ggc-grid='true' >
-
-      </div>
-      <ggc-icon-grid ng-click="clicked($event)"></ggc-icon-grid>
-    </div>
-
-      <!-- >The Player Panels Go Here<-->
-      <div ng-repeat="(name, player) in game.players">
-        <player-panel ></player-panel>
-      </div>
-
-    </div>
-
-  </div>
+  <div ui-view="scrim"></div>
+  <div ui-view="main"></div>
+  <div ui-view="plane"></div>
 </div>
 
 
