--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -2,23 +2,28 @@
 
 <div ng-class="player.docked ? 'panelOuter{{name}}' : 'panelOuter{{name}} retract'">
   <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.currentPlayer == false]-->
-    <div class="topPlane"><div class="colorbar"><h3>{{name | capitalize}}</h3></div></div>
+    <div class="topPlane"></div>
     <div class="bottomPlane">
-
+      <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
       <div ng-show="game.phase == 'choice'">
         <div ng-show = "player.currentPlayer">
-          <h4 class = "tab-title">Choose an issue to propose.</h4>
+
+          <h4 class = "tab-title text-center">Choose an Action</h4>
           <div class="col-md-6" ng-click="dealer.choose($index)" ng-repeat="choice in player.hand.choices track by $index">
-            <h5 class="tab-body text-center">{{choice.action | capitalize}}</h5>
-            <div style="" class="tab-img" ng-bind-html="trust(choice.icon.icon)"></div>
+
+            <!--div style="" class="tab-img" ng-bind-html="trust(choice.icon.icon)"></div -->
+            <div ggc-icon  icon-class="{{name}}" frame="true" icon-id="{{choice.icon._id}}"></div>
           </div>
         </div>
       </div>
 
       <div ng-show = "game.phase == 'vote'" class="vote-block">
         <h5>{{player.hand.vote.action}}</h5>
-        <div class="tab-img-vote" ng-bind-html="trust(player.hand.issue.icon.icon)"></div>
-        <p class="tab-body" ng-repeat = "t in player.hand.issue.text">{{t}}</p>
+
+        <div class="tab-body" ng-repeat = "t in player.hand.issue.text">
+          <div ng-bind-html="t"></div>
+          <br />
+        </div>
 
       </div>
 
