--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,10 +1,14 @@
 
 
 
-<div id="main">
-  <div ui-view="scrim"></div>
-  <div ui-view="main"></div>
-  <div ui-view="plane"></div>
-</div>
+
+   <div id="main">
+    <div ui-view="scrim"></div>
+ <!--TODO(Ryan):  Tell Ray why?-->
+        <div id="box-wrap-inner" ui-view="main"></div>
+
+    <div ui-view="plane"></div>
+  </div>
+
 
 
