GGC-4 Block/Pass Animations - Unskew buttons/Basic passblock anims

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -6,7 +6,8 @@
      <div ui-view="plane"></div>
     <div ui-view="scrim"></div>
  <!--TODO(Ryan):  Tell Ray why?-->
-        <div id="box-wrap-inner" ui-view="main"></div>
+        <div id="box-wrap-inner"
+             ui-view="main"></div>
 
 
   </div>
