--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -27,11 +27,10 @@
 
       </div>
 
-      <div ng-show = "game.phase == 'vote'" class="vote-buttons">
-        <div class="btn-group" role="group" ng-hide = "player.voted" aria-label="...">
-          <a ng-click="dealer.playerChoice(name, 0)" class = "btn-icon {{name}}" >BLOCK</a>
-          <a ng-click="dealer.playerChoice(name, 1)" class = "btn-icon {{name}}" >PASS</a>
-
+      <div ng-show = "game.phase == 'vote'" class="vote-buttons" >
+        <div class="btn-group" role="group" aria-label="...">
+          <a ng-hide="player.hand.issue.vote == 1" class='btn-icon {{name}}'>BLOCK</a>
+          <a ng-hide="player.hand.issue.vote == 0" class='btn-icon {{name}}'>PASS</a>
         </div>
       </div>
 
